Menambahkan Heading pada index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" href="#">
 </head>
 <body>
-	<p>Halo Dunia</p>
+	<h1>Halo Lyon</h1>
+	<p>Hai Saya Lyon</p>
+
 </body>
 </html>
